[gd_scene load_steps=2 format=3 uid="uid://ckrpd65ywtqdg"]

[ext_resource type="Script" path="res://Hurtboxes + Hitboxes/hurt_box.gd" id="1_c8jxs"]

[node name="hurt_box" type="Area2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_c8jxs")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Timer" type="Timer" parent="."]

[connection signal="invencibility_ended" from="." to="." method="_on_invencibility_ended"]
[connection signal="invencibility_started" from="." to="." method="_on_invencibility_started"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
